--- a/app/src/main/res/layout/activity_mediapipe.xml
+++ b/app/src/main/res/layout/activity_mediapipe.xml
@@ -42,9 +42,6 @@
         android:id="@+id/mediapipe_stop_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:paddingTop="10sp"
-        android:paddingBottom="10sp"
         android:visibility="gone"
         app:cardCornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,16 +51,15 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="10sp"
+            android:paddingTop="10sp">
 
 
             <TextView
                 android:id="@+id/mediapipe_paused_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="75sp"
-                android:paddingTop="10sp"
-                android:paddingRight="75sp"
                 android:text="Training Paused"
                 android:textColor="#FF0000"
                 android:textSize="25sp"
@@ -75,15 +71,13 @@
                 android:id="@+id/mediapipe_continue_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"
+                android:layout_marginLeft="4sp"
+                android:layout_marginRight="4sp"
                 android:text="Continue"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0"
+                android:backgroundTint="@color/sg_design_green"
+                app:layout_constraintEnd_toStartOf="@+id/mediapipe_skip_exercise_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/mediapipe_paused_text" />
 
@@ -91,33 +85,27 @@
                 android:id="@+id/mediapipe_skip_exercise_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"
+                android:layout_marginLeft="4sp"
+                android:layout_marginRight="4sp"
                 android:text="Skip"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.57"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/mediapipe_continue_button"
+                app:layout_constraintEnd_toStartOf="@+id/mediapipe_finish_button"
                 app:layout_constraintTop_toBottomOf="@id/mediapipe_paused_text" />
 
             <Button
                 android:id="@+id/mediapipe_finish_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10sp"
-                android:layout_marginRight="10sp"
+                android:layout_marginLeft="4sp"
+                android:layout_marginRight="4sp"
                 android:backgroundTint="#FF0000"
-                android:paddingLeft="10sp"
-                android:paddingRight="10sp"
                 android:text="Finish"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/mediapipe_skip_exercise_button"
                 app:layout_constraintTop_toBottomOf="@id/mediapipe_paused_text" />
 
 
@@ -126,14 +114,15 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="65sp"
         app:cardCornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageView
@@ -142,8 +131,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:background="@null"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_check_green_24dp" />
 
