--- a/app/src/main/res/layout/fragment_statistics_weekly.xml
+++ b/app/src/main/res/layout/fragment_statistics_weekly.xml
@@ -30,7 +30,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:text="@string/yy_mm_dd_hh_mm_ss"
+                    android:text="@string/hh_mm_ss"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/textview_value_total_statistics"
@@ -41,7 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="@string/dd_hh_mm_ss"
+                    android:text="@string/hh_mm_ss"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/textview_value_total_week_statistics_weekly"
