--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,8 @@
         <item name="colorSurface">@color/sg_design_green</item>
         <!-- Custom design -->
         <item name="actionBarTheme">@style/Theme.ActionBar</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="colorOnBackground">@color/white</item>
     </style>
 
     <style name="Theme.ActionBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
