Recording (not perfect), removed "start-recording" in training alert dialog, adjusted mediapipe overlay, adjusted mediapipe finishedExercise dialog, fix playback list refreshing when playback was recorded, minor cleanup

--- a/app/src/main/res/layout/item_videoitem.xml
+++ b/app/src/main/res/layout/item_videoitem.xml
@@ -17,7 +17,7 @@
             android:id="@+id/cardview_viditem"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:cardBackgroundColor="@color/sg_design_light_green"
+            app:cardBackgroundColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
